Fixed landscape for empty view + added the math activity to not show in recent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
                   android:windowSoftInputMode="stateHidden">
         </activity>
         <activity android:name=".AlarmMathActivity"
+                  android:excludeFromRecents="true"
                   android:configChanges="orientation|screenSize">
         </activity>
         <service
